<resources>
    <string name="app_name">Halp!</string>
    <string name="tip">Having regular 5 min breaks every hour helps with the productivity!</string>
    <string name="Greeting">How can we help you today?</string>
    <string name="Home">Home</string>
    <string name="Agenda">Agenda</string>
    <string name="Calendar">Calendar</string>
    <string name="Assignments">Assignments</string>
    <string name="Reminders">Reminders</string>
    <string name="FlashCard">FlashCard</string>
    <string name="Settings">Settings</string>
    <string name="action_sign_in_short">password</string>
    <string name="classesTitle">Classes</string>
    <string name="hoursTitle">Hours</string>
    <string name="Math">Math</string>
    <string name="PDM">Mobile Devices Programming</string>
    <string name="NineAM">9:00 AM</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>


</resources>
