<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/activity_main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/AppTheme" />

            <android.support.v7.widget.CardView
                android:id="@+id/activity_main_tabla_clase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_main_toolbar"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                app:cardMaxElevation="@dimen/cardview_compat_inset_shadow"
                app:cardUseCompatPadding="true">
                <TableLayout
                    android:id="@+id/activity_main_class_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1"
                    android:padding="@dimen/tables_pad">
                    <TableRow>
                        <TextView
                            android:text="@string/classesTitle"
                            android:padding="@dimen/table_padding"
                            android:textSize="@dimen/header_home"
                            />
                        <TextView
                            android:text="@string/hoursTitle"
                            android:padding="@dimen/table_padding"
                            android:textSize="@dimen/header_home"
                            />
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/Math"
                            android:padding="@dimen/table_padding"
                            android:textSize="@dimen/content_home"
                            android:gravity="center"/>
                        <TextView
                            android:text="@string/NineAM"
                            android:padding="@dimen/table_padding"
                            android:textSize="@dimen/content_home"
                            android:gravity="center"/>

                    </TableRow>

                    <View
                        android:layout_height="2dp"
                        android:background="@color/colorTabBar"/>

                    <TableRow>
                        <TextView
                            android:text="@string/PDM"
                            android:padding="@dimen/table_padding"
                            android:textSize="@dimen/content_home"
                            android:layout_column="0"
                            android:gravity="center"/>
                        <TextView
                            android:text="@string/NineAM"
                            android:padding="@dimen/table_padding"
                            android:textSize="@dimen/content_home"
                            android:layout_column="1"
                            android:gravity="center"/>
                    </TableRow>
                    <View
                        android:layout_height="2dp"
                        android:background="@color/colorTabBar"/>
                </TableLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_below="@id/activity_main_tabla_clase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true">
                <TableLayout
                    android:id="@+id/activity_main_assignment_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1"
                    android:layout_below="@id/activity_main_class_table"
                    android:padding="@dimen/tables_pad">
                    <TableRow>
                        <TextView
                            android:text="@string/classesTitle"
                            android:padding="@dimen/table_padding"
                            android:textSize="@dimen/header_home"
                            />
                        <TextView
                            android:text="@string/hoursTitle"
                            android:padding="@dimen/table_padding"
                            android:textSize="@dimen/header_home"
                            />
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/Math"
                            android:padding="@dimen/table_padding"
                            android:textSize="@dimen/content_home"
                            android:gravity="center"/>
                        <TextView
                            android:text="@string/NineAM"
                            android:padding="@dimen/table_padding"
                            android:textSize="@dimen/content_home"
                            android:gravity="center"/>

                    </TableRow>

                    <View
                        android:layout_height="2dp"
                        android:background="@color/colorTabBar"/>

                    <TableRow>
                        <TextView
                            android:text="@string/PDM"
                            android:padding="@dimen/table_padding"
                            android:textSize="@dimen/content_home"
                            android:layout_column="0"
                            android:gravity="center"/>
                        <TextView
                            android:text="@string/NineAM"
                            android:padding="@dimen/table_padding"
                            android:textSize="@dimen/content_home"
                            android:layout_column="1"
                            android:gravity="center"/>
                    </TableRow>
                    <View
                        android:layout_height="2dp"
                        android:background="@color/colorTabBar"/>
                </TableLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"/>



</android.support.v4.widget.DrawerLayout>
